Add HARK task to supervisor

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -35,3 +35,14 @@ autorestart=true
 stopsignal=QUIT
 stdout_logfile=/var/log/x11vnc.log
 stderr_logfile=/var/log/x11vnc.err
+
+[program:hark]
+priority=10
+directory=/usr/bin/hark-designer
+command=node app.js allowremote
+user=root
+autostart=true
+autorestart=true
+stopsignal=QUIT
+stdout_logfile=/var/log/hark.log
+stderr_logfile=/var/log/hark.err
