start hark_designer on startup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ hark:
   ports:
     - "5900:5900"
     - "3000:3000"
+  volumes:
+    - ../networks:/usr/share/hark-designer/userdata/networks
   devices:
     - "/dev/snd:/dev/snd"
 
